--- a/vim-manager/pom.xml
+++ b/vim-manager/pom.xml
@@ -12,10 +12,10 @@
     </parent>
 
     <groupId>com.vnfm</groupId>
-    <artifactId>chapter-6-lcm-core</artifactId>
+    <artifactId>vim-manager</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>chapter-6-lcm-core</name>
-    <description>Chapter 6 - LCM Core - VNF Lifecycle Management</description>
+    <name>vim-manager</name>
+    <description>VIM Manager - Consumes vim.commands, calls VIM (mock/simulator), publishes replies to vim.replies</description>
 
     <properties>
         <java.version>17</java.version>
@@ -43,6 +43,10 @@
             <artifactId>spring-kafka</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-spring-boot3</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
@@ -57,16 +61,9 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-        <!-- Debezium embedded engine for CDC from PostgreSQL to Kafka -->
         <dependency>
-            <groupId>io.debezium</groupId>
-            <artifactId>debezium-embedded</artifactId>
-            <version>2.5.0.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>io.debezium</groupId>
-            <artifactId>debezium-connector-postgres</artifactId>
-            <version>2.5.0.Final</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -76,21 +73,6 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>testcontainers</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>postgresql</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
