gateway's circuit breaker and other functionality addition

--- a/sea-route-gateway/pom.xml
+++ b/sea-route-gateway/pom.xml
@@ -59,6 +59,18 @@
             <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
         </dependency>
 
+        <!-- OAuth2 Resource Server (JWT validation support) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+
+        <!-- Spring Cloud Circuit Breaker with Resilience4J (reactive) -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-circuitbreaker-reactor-resilience4j</artifactId>
+        </dependency>
+
         <!-- Lombok (compile-time boilerplate reduction) -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -77,6 +89,14 @@
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- WireMock (mock backend for proxy tests; 2.x for com.github.tomakehurst API) -->
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock-jre8-standalone</artifactId>
+            <version>2.35.0</version>
             <scope>test</scope>
         </dependency>
 
