--- a/sea-route-gateway/src/main/resources/application.yml
+++ b/sea-route-gateway/src/main/resources/application.yml
@@ -1,61 +1,20 @@
-# =============================================================================
-# Sea Route Gateway - Application Configuration
-# =============================================================================
-# Properties below will be populated in later steps.
-# =============================================================================
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,metrics,prometheus
+  endpoint:
+    health:
+      show-details: when-authorized
+  # Distributed tracing: track a request across gateway and downstream services (X-B3-* headers).
+  # Crucial for debugging latency and understanding call flows.
+  tracing:
+    sampling:
+      probability: 1.0   # development: sample all; in production use a lower value (e.g. 0.1)
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
 
-# Server
-# server:
-#   port: 8080
-
-# Spring Cloud Gateway
-# spring:
-#   cloud:
-#     gateway:
-#       routes: []
-#       default-filters: []
-
-# Eureka Client (service discovery)
-# eureka:
-#   client:
-#     service-url:
-#       defaultZone: http://localhost:8761/eureka/
-#   instance:
-#     prefer-ip-address: true
-
-# Redis (rate limiting and caching)
-# spring:
-#   data:
-#     redis:
-#       host: localhost
-#       port: 6379
-
-# Actuator
-# management:
-#   endpoints:
-#     web:
-#       exposure:
-#         include: health,info,gateway
-#   endpoint:
-#     health:
-#       show-details: when-authorized
-
-# Application name (for Eureka registration)
-# spring:
-#   application:
-#     name: sea-route-gateway
-
-# Logging: JSON output is configured in logback-spring.xml via logstash-logback-encoder.
-# logging:
-#   level:
-#     com.searoute.gateway: INFO
-#     org.springframework.cloud.gateway: INFO
-
-# -----------------------------------------------------------------------------
-# JWT (OAuth2 Resource Server) - for gateway authentication
-# -----------------------------------------------------------------------------
-# Issuer URI: used to validate the JWT "iss" claim and to discover the JWK Set
-# (OpenID Connect discovery). For development, use a test issuer such as Keycloak.
 spring:
   # Redis: used by the gateway for distributed rate limiting (token bucket).
   data:
@@ -63,8 +22,12 @@ spring:
       host: localhost
       port: 6379
   # Request rate limiter: add X-RateLimit-* headers to responses for client visibility.
+  # Token bucket: replenish-rate = tokens per second; burst-capacity = max tokens per key (user or IP).
   cloud:
     gateway:
+      rate-limiter:
+        replenish-rate: 10   # sustained request rate per second per key
+        burst-capacity: 20   # max burst (allows short spikes above replenish-rate)
       filter:
         request-rate-limiter:
           include-headers: true
@@ -105,6 +68,12 @@ resilience4j:
         waitDurationInOpenState: 10s
         minimumNumberOfCalls: 5
         permittedNumberOfCallsInHalfOpenState: 3
+      paymentService:
+        slidingWindowSize: 10
+        failureRateThreshold: 50
+        waitDurationInOpenState: 10s
+        minimumNumberOfCalls: 5
+        permittedNumberOfCallsInHalfOpenState: 3
 
 # -----------------------------------------------------------------------------
 # Backend service base URLs (for WebClient proxies)
@@ -115,3 +84,4 @@ searoute:
     booking-base-url: http://localhost:8081
     tracking-base-url: http://localhost:8082
     schedule-base-url: http://localhost:8083
+    payment-base-url: http://localhost:8084
